# wetopla

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
rpm/: wetopla.spec
src/: application.rs  buffer.rs  event_loop.rs  main.rs  project.rs  task.rs  terminal.rs  terminal_utils.rs  utils.rs  widgets.rs
src/widgets/: line_input.rs  message_box.rs
