[package]
name = "wetopla"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"]}
chrono = { version = "0.4", features = ["serde"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
futures = "0.3"
tokio-util = "0.7"
