[package]
name = "wetopla"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = { version = "0.26.0", features = ["event-stream"]}
chrono = { version = "0.4.23", features = ["serde"]}
serde = { version = "1.0.154", features = ["derive"]}
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
futures = "0.3.27"
tokio-util = "0.7.7"
